# Tremolometer

./: .gitignore  .gitmodules  README.md  TremoloConf  generateDocumentation.sh  install.sh  requirements.txt  start.sh
client/: client.py  config.py  config.yaml  costumeTyping.py  csvReading.py  customTypes.py  filter.py  graphData.py  interface.py  spectrogram.py  test.py  timer.py  usbCommunication.py
microcontroller/: CMakeLists.txt  accelerometer.c  accelerometer.h  base64Encode.c  base64Encode.h  data.h  led.c  led.h  main.c  main_old.c  time.c  time.h  tremolometerState.h  tusb_config.h  usbTransfer.c  usbTransfer.h
models/: Tremolometer case.f3d  Tremolomter accel case.f3d
